--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@ footer {
 }
 .flip-card {
   background-color: transparent;
-  width: 100%;
+  width: 100px;
   max-width: 500px;
-  height: 100%;
+  height: 100px;
   perspective: 1000px;
   margin-bottom: 2rem;
 }
